--- a/client/app/components/about/about.component.html
+++ b/client/app/components/about/about.component.html
@@ -9,7 +9,7 @@
         <b>GitHub: </b><a href="https://github.com/atao60/MEAN-Full-Stack" target="_blank">project repository</a>
       </li>
       <li>
-        <b>This project uses the MEAN stack:</b>
+        <b>This project is written entirely in <a href="https://www.typescriptlang.org">TypeScript</a> and uses the <a href="https://en.wikipedia.org/wiki/MEAN_(software_bundle)">MEAN</a> stack:</b>
       </li>
       <ul>
         <li>
