Using Google Font Lato as default font

--- a/client/app/components/about/about.component.html
+++ b/client/app/components/about/about.component.html
@@ -39,6 +39,9 @@
           <a href="http://www.fontawesome.io" target="_blank">Font Awesome</a>
         </li>
         <li>
+          <a href="https://fonts.google.com" target="_blank">Google Fonts</a>
+        </li>
+        <li>
           <a href="https://jwt.io" target="_blank">JSON Web Token</a>
         </li>
         <li>
