--- a/client/app/components/about/about.component.html
+++ b/client/app/components/about/about.component.html
@@ -6,7 +6,7 @@
         <b>Author: </b><a href="https://github.com/atao60" target="_blank">Pierre Raoul</a>
       </li>
       <li>
-        <b>GitHub: </b><a href="https://github.com/atao60/MEAN-Full-Stack" target="_blank">project repository</a>
+        <b>Project repository: </b><a href="https://github.com/atao60/MEAN-Full-Stack" target="_blank">GitHub</a>
       </li>
       <li>
         <b>This project is written entirely in <a href="https://www.typescriptlang.org">TypeScript</a> and uses the <a href="https://en.wikipedia.org/wiki/MEAN_(software_bundle)">MEAN</a> stack:</b>
