--- a/client/app/components/about/about.component.html
+++ b/client/app/components/about/about.component.html
@@ -33,7 +33,7 @@
           <a href="https://cli.angular.io" target="_blank">Angular CLI</a>
         </li>
         <li>
-          <a href="http://www.getbootstrap.com" target="_blank">Bootstrap</a>
+          <a href="http://www.getbootstrap.com" target="_blank">Bootstrap 4 (css)</a>
         </li>
         <li>
           <a href="http://www.fontawesome.io" target="_blank">Font Awesome</a>
