Add @ng-bootstrap & remove popper.js + tether

--- a/client/app/components/about/about.component.html
+++ b/client/app/components/about/about.component.html
@@ -36,6 +36,9 @@
           <a href="http://www.getbootstrap.com" target="_blank">Bootstrap 4 (css)</a>
         </li>
         <li>
+          <a href="https://ng-bootstrap.github.io" target="_blank">Angular powered Bootstrap</a>
+        </li>
+        <li>
           <a href="http://www.fontawesome.io" target="_blank">Font Awesome</a>
         </li>
         <li>
