--- a/client/app/components/shared/toast/toast.component.html
+++ b/client/app/components/shared/toast/toast.component.html
@@ -1,3 +1,3 @@
-<div *ngIf="message.body" class="alert" [ngClass]="'alert-' + message.type" role="alert">
+<div *ngIf="message.body" class="alert" [ngClass]="'alert-' + message.type" role="alert" [@msgAnim]>
   <b>Message:</b> {{message.body}}
 </div>
