Upgrade to Angular 8

--- a/client/app/components/about/about.component.html
+++ b/client/app/components/about/about.component.html
@@ -36,7 +36,7 @@
           <a href="https://getbootstrap.com/" target="_blank">Bootstrap 4 (css part only)</a>
         </li>
         <li>
-          <a href="https://ng-bootstrap.github.io" target="_blank">Angular powered Bootstrap</a>
+          <a href="https://ng-bootstrap.github.io" target="_blank">Angular powered Bootstrap (widgets)</a>
         </li>
         <li>
           <a href="http://www.fontawesome.io" target="_blank">Font Awesome</a>
